--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "chess.js": "^0.13.4",
+    "express": "^4.18.1",
+    "stockfish": "^15.0.0"
   }
 }
