--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "chess.js": "^0.13.4",
-    "express": "^4.18.1",
-    "stockfish": "^15.0.0"
+    "express": "^4.18.1"
   }
 }
