--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1",
-    "socket.io": "^4.5.2"
+    "express": "^4.18.1"
   }
 }
