--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "chess.js": "^1.0.0-alpha.0",
     "express": "^4.18.1"
   }
 }
